--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -18,8 +18,8 @@ window#waybar {
 
 #window {
     margin: 8px;
-    padding-left: 8;
-    padding-right: 8;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 button {
@@ -63,6 +63,7 @@ button:hover {
 #temperature,
 #backlight,
 #wireplumber,
+#custom-power
 #tray,
 #network,
 #bluetooth,
@@ -77,7 +78,7 @@ button:hover {
 }
 
 #clock {
-    color: @maroon;
+    color: @flamingo;
     border-bottom: 2px solid @maroon;
 }
 
@@ -115,6 +116,11 @@ button:hover {
   border-bottom: 2px solid @sapphire
 }
 
+#custom-power {
+  color: @red;
+  border-bottom: 2px solid @red;
+}
+
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left>widget:first-child>#workspaces {
     margin-left: 0;
@@ -125,9 +131,5 @@ button:hover {
     margin-right: 0;
 }
 
-#custom-vpn {
-    color: @lavender;
-    border-radius: 15px;
-    padding-left: 6px;
-    padding-right: 6px;
-}
+
+
